--- a/src/components/form/datepicker.css
+++ b/src/components/form/datepicker.css
@@ -2,7 +2,8 @@
 /* INPUT */
 .react-datepicker__input-container > input {
     height: 48px;
-    width: 240px;
+    width: 100%;
+    display: inline-block;
     border-radius: 6px;
     font-size: 12px;
     line-height: 15px;
@@ -23,7 +24,6 @@
 }
 .dark > .react-datepicker-wrapper > .react-datepicker__input-container > input {
     background-color: #1E2139;
-    border: 1px solid #DFE3FA;
     color: #fff;
 }
 
